# SQLShelf

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_app.ps1  main.py  pyproject.toml  requirements.txt  sqlshelf.spec
.github/workflows/: build.yml  release.yml
docs/: database-schema.md  escopo-sqlshelf-python-pyside6.md
docs/Redesign_UI/: Slice_0_Reconhecimento .md
installer/: sqlshelf.iss  version_info.txt
installer/AppDir/: AppRun  sqlshelf.desktop
locales/en/: translation.json
locales/es/: translation.json
locales/pt-BR/: translation.json
sqlshelf/core/: autostart.py  config.py  encoding.py  frontmatter.py  i18n.py  index_db.py  models.py  scanner.py  schema.sql  search.py  snippets.py  sql_objects.py  updater.py  watcher.py
sqlshelf/ui/: code_editor.py  command_palette.py  highlighter.py  main_window.py  metadata_panel.py  new_query_dialog.py  query_list.py  search_bar.py  sidebar.py  tag_widget.py  template_dialog.py
sqlshelf/ui/theme/: tokens.py
tests/: test_encoding.py  test_frontmatter.py  test_index_db.py  test_search.py  test_sql_objects.py
