[project]
name = "sqlshelf"
version = "1.0.3"
description = "Open-source desktop SQL query manager — organize, search and annotate .sql files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Raphael Franco", email = "raphael.rfranco@gmail.com" }]
dependencies = [
    "PySide6>=6.7",
    "PyYAML>=6.0",
    "qt-material>=2.14",
    "sqlglot>=23.0",
    "watchdog>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
target-version = ["py312"]
line-length = 88
